--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
     "form-urlencoded": "0.0.3",
     "mellt": "~1.0.0",
     "modinha-redis": "0.0.6",
-    "innit-auth-server-ui" : "git://github.com/InnitApps/innit-auth-server-ui.git"
+    "innit-auth-server-ui" : "git+https://github.com/InnitApps/innit-auth-server-ui.git"
   }
 }
